--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,13 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="path/to/font-awesome/css/font-awesome.min.css"
+    />
     <link type="text/css" rel="stylesheet" href="App.css" />
 
-    <title>React App</title>
+    <title>Venuslabs</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
